Fix alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2050,7 +2050,6 @@
 		.item header {
 			background: #fff;
 			font-size: 0.8em;
-			text-align: center;
 
 		}
 
